Fixed hamburger menu visibility

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ nav {
     padding: 10px 30px;
     position: absolute;
     width: 100%;
+    z-index: 10;
 }
 
 nav img {
